<resources>
    <string name="app_name">MartianNews</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="internet_error">网络异常,请检查网络设置</string>
    <string name="db_error">数据库出错了</string>
    <string name="retry_refresh_news">点我一下 重新加载</string>
    <string name="load_error">加载失败</string>
    <string name="retry_after">请稍后重试</string>
    <string name="loading">加载中…</string>
    <string name="share">分享</string>
    <string name="save">保存</string>
    <string name="set_wallpaper">设为壁纸</string>
    <string name="picture_already_save_to">图片已保存至%1$s</string>
    <string name="set_wallpaper_success">设置壁纸成功</string>
    <string name="error_try_again">错误，请重试</string>

    <string name="version">v1.0</string>

    <!--menu-->
    <string name="news">新闻</string>
    <string name="zhihu">知乎</string>
    <string name="photo">图片</string>
    <string name="video">视频</string>
    <string name="tools">设置</string>
    <string name="no_photo_mode">无图模式</string>
    <string name="night_mode">夜间模式</string>
    <string name="about">关于</string>
    <string name="photo_news">图片新闻</string>
    <string name="photo_collections">图集：%1$s</string>
    <string name="no_more">没有更多了</string>
    <string name="news_from">%1$s %2$s</string>
    <string name="photo_detail_title">%1$d/%2$d　%3$s</string>

    <string name="more_channel">更多频道</string>
    <string name="my_channel">我的频道</string>
    <string name="channel_manage">频道管理</string>
    <string name="channel_explain">点击可增删/长按并拖拽可排序</string>
    <string name="girl">妹纸</string>

    <!-- 共享过度动画 -->
    <string name="transition_photos">transition_animation_news_photos</string>


    <string name="about_msg">
        这是一款Material Design风格的新闻阅读App，采用MVP模式，基于Dagger2+RxJava+Retrofit2进行开发。
        \n新闻模块数据来源于网易，图片模块数据来源于干货集中营。

        \n\n主要用到的开源库：Dagger2、RxJava、Retrofit2、Butterknife、Greendao、PhotoView、Glide、Picasso…

    </string>

    <string name="register_success">Register push success.</string>
    <string name="register_fail">Register push fail.</string>
    <string name="recv_passthrough_message"> Receive a passthrough message. Content is \"%1$s\"</string>
    <string name="click_notification_message"> Clicked a notification message. Content is \"%1$s\"</string>
    <string name="arrive_notification_message"> Arrived a notification message. Content is \"%1$s\"</string>
    <string name="set_alias_success"> Set alias \"%1$s\" success.</string>
    <string name="set_alias_fail"> Set alias fail for %1$s.</string>
    <string name="unset_alias_success"> Unset alias \"%1$s\" success.</string>
    <string name="unset_alias_fail"> Unset alias fail for %1$s.</string>
    <string name="set_account_success"> Set account \"%1$s\" success.</string>
    <string name="set_account_fail"> Set account fail for %1$s.</string>
    <string name="unset_account_success"> Unset account \"%1$s\" success.</string>
    <string name="unset_account_fail"> Unset account fail for %1$s.</string>
    <string name="subscribe_topic_success"> Subscribe topic \"%1$s\" success.</string>
    <string name="subscribe_topic_fail"> Subscribe topic fail for %1$s.</string>
    <string name="unsubscribe_topic_success"> Unsubscribe topic \"%1$s\" success.</string>
    <string name="unsubscribe_topic_fail"> Unsubscribe topic fail for %1$s.</string>
    <string name="set_accept_time_success"> Set accept time %1$s - %2$s success.</string>
    <string name="set_accept_time_fail"> Set accept time fail for %1$s.</string>

</resources>
