<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <group android:checkableBehavior="single"
        >

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_newspaper"
            android:title="@string/news" />

        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_image"
            android:title="@string/photo" />

        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_play"
            android:title="@string/video" />

    </group>

    <item android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/nav_night_mode"
                android:title="@string/night_mode"
                app:actionLayout="@layout/button_switch"
                app:showAsAction="always"/>
        </menu>
    </item>
</menu>